--- a/train_unet.ipynb
+++ b/train_unet.ipynb
@@ -6,12 +6,14 @@
       "name": "train_unet.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -25,14 +27,241 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dSBRuo5MP3Kp",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Connect notebook to drive"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "rOcA3O5HO-tT",
         "colab_type": "code",
+        "outputId": "d05f5421-c8f2-476e-ecaf-f9d4692117dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sedzQQyePmp4",
+        "colab_type": "code",
+        "outputId": "0b0b844b-05ca-4f9a-8f28-d3e916e45270",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        }
+      },
+      "source": [
+        "!git clone https://stegmuel:JtBz06100307@github.com/stegmuel/binarization.git"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'binarization'...\n",
+            "remote: Enumerating objects: 20, done.\u001b[K\n",
+            "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
+            "remote: Total 20 (delta 1), reused 13 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (20/20), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lzNrCfwPpYgb",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Define base directories"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7l1PwCzranpE",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "source_path = '/content/binarization/source/'\n",
+        "data_path = '/drive/My Drive/Colab Notebooks/binarization/data/'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OKbm9F9N5tvR",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Import useful packages"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tSuV7aOJ4S3J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import importlib.util\n",
+        "import sys"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6-fdTX2U4pa6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "sys.path.append(source_path)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V7itx3d-56vr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from models import *\n",
+        "from classes import *\n",
+        "from keras.optimizers import Adam\n",
+        "import keras.backend as K\n",
+        "from keras.models import load_model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7pnZGkcZ6SfF",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Useful functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x2VCzZQ-59VB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def jaccard_accuracy(y_true, y_pred):\n",
+        "    eps = 1.0\n",
+        "    num = K.sum(y_true * y_pred) + 1.0\n",
+        "    den = K.sum(y_true + y_pred) - num + 1.0\n",
+        "    return num / den\n",
+        "\n",
+        "\n",
+        "def jaccard_loss(y_true, y_pred):\n",
+        "    return 1 - jaccard_accuracy(y_true, y_pred)\n",
+        "\n",
+        "\n",
+        "def dice_accuracy(y_true, y_pred):\n",
+        "    eps = 1.0\n",
+        "    num = 2 * K.sum(y_true * y_pred) + 1.0\n",
+        "    den = K.sum(y_true + y_pred) + 1.0\n",
+        "    return num / den\n",
+        "\n",
+        "\n",
+        "def dice_loss(y_true, y_pred):\n",
+        "    return 1 - dice_accuracy(y_true, y_pred)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yNOfEpTq6ZW8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "    train_data_dir = '../data/train_data/'\n",
+        "    file_path = '../data/train_data.lst'\n",
+        "    models_path = '../models/'\n",
+        "    images_names, images_gt_names = get_images_names(file_path)\n",
+        "\n",
+        "    train_images_names = images_names[0:100]\n",
+        "    train_images_gt_names = images_gt_names[0:100]\n",
+        "    validation_images_names = images_names[100:110]\n",
+        "    validation_images_gt_names = images_gt_names[100:110]\n",
+        "\n",
+        "    train_generator = DataGenerator(train_images_names, train_images_gt_names, \n",
+        "                                    10, train_data_dir)\n",
+        "    validation_generator = DataGenerator(validation_images_names, \n",
+        "                                         validation_images_gt_names, 10, train_data_dir)\n",
+        "    \n",
+        "    if os.path.exists(os.path.join(models_path, 'UNet.h5')):\n",
+        "        UNet = load_model(os.path.join(models_path, 'UNet.h5'),\n",
+        "                          custom_objects={'jaccard_loss': jaccard_loss, \n",
+        "                                          'jaccard_accuracy': jaccard_accuracy,\n",
+        "                                          'dice_loss': dice_loss, \n",
+        "                                          'dice_accuracy': dice_accuracy})\n",
+        "    else:\n",
+        "        UNet = unet()\n",
+        "        UNet.compile(optimizer=Adam(), loss=jaccard_loss, metrics=['accuracy', jaccard_accuracy, dice_accuracy])\n",
+        "\n",
+        "    \n",
+        "    UNet.fit_generator(\n",
+        "        generator=train_generator,\n",
+        "        steps_per_epoch=train_generator.__len__(),  # Compatibility with old Keras versions.\n",
+        "        validation_data=validation_generator,\n",
+        "        validation_steps=validation_generator.__len__(),  # Compatibility with old Keras versions.\n",
+        "        epochs=1,\n",
+        "        shuffle=True,\n",
+        "        use_multiprocessing=True,\n",
+        "        workers=4,\n",
+        "    )\n",
+        "    UNet.save(os.path.join(models_path, 'UNet.h5'))"
       ],
       "execution_count": 0,
       "outputs": []
