--- a/train_unet.ipynb
+++ b/train_unet.ipynb
@@ -99,6 +99,36 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "OKbm9F9N5tvR",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Import useful packages"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tSuV7aOJ4S3J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import importlib.util\n",
+        "import sys\n",
+        "sys.path.append(source_path)\n",
+        "from models import *\n",
+        "from classes import *\n",
+        "from keras.optimizers import Adam\n",
+        "import keras.backend as K\n",
+        "from keras.models import load_model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "lzNrCfwPpYgb",
         "colab_type": "text"
       },
@@ -116,61 +146,6 @@
       "source": [
         "source_path = '/content/binarization/source/'\n",
         "data_path = '/drive/My Drive/Colab Notebooks/binarization/data/'"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OKbm9F9N5tvR",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Import useful packages"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tSuV7aOJ4S3J",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import importlib.util\n",
-        "import sys"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6-fdTX2U4pa6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "sys.path.append(source_path)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "V7itx3d-56vr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from models import *\n",
-        "from classes import *\n",
-        "from keras.optimizers import Adam\n",
-        "import keras.backend as K\n",
-        "from keras.models import load_model"
       ],
       "execution_count": 0,
       "outputs": []
