--- a/train_unet.ipynb
+++ b/train_unet.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "rOcA3O5HO-tT",
         "colab_type": "code",
-        "outputId": "d05f5421-c8f2-476e-ecaf-f9d4692117dd",
+        "outputId": "c8434eb9-5f5d-49cb-8f26-49a74573bc49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
@@ -51,7 +51,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "sedzQQyePmp4",
         "colab_type": "code",
-        "outputId": "0b0b844b-05ca-4f9a-8f28-d3e916e45270",
+        "outputId": "394ee193-0129-4fe4-8fdf-81ad76213aa8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -80,17 +80,17 @@
       "source": [
         "!git clone https://stegmuel:JtBz06100307@github.com/stegmuel/binarization.git"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'binarization'...\n",
-            "remote: Enumerating objects: 20, done.\u001b[K\n",
-            "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
-            "remote: Total 20 (delta 1), reused 13 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (20/20), done.\n"
+            "remote: Enumerating objects: 30, done.\u001b[K\n",
+            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (25/25), done.\u001b[K\n",
+            "remote: Total 30 (delta 8), reused 18 (delta 3), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (30/30), done.\n"
           ],
           "name": "stdout"
         }
@@ -109,9 +109,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tSuV7aOJ4S3J",
+        "id": "7l1PwCzranpE",
         "colab_type": "code",
         "colab": {}
+      },
+      "source": [
+        "source_path = '/content/binarization/source/'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tSuV7aOJ4S3J",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "93051be3-4114-4517-b94b-954ef77aaea5"
       },
       "source": [
         "import importlib.util\n",
@@ -121,34 +138,19 @@
         "from classes import *\n",
         "from keras.optimizers import Adam\n",
         "import keras.backend as K\n",
-        "from keras.models import load_model"
+        "from keras.models import load_model\n",
+        "import zipfile"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lzNrCfwPpYgb",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Define base directories"
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7l1PwCzranpE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "source_path = '/content/binarization/source/'\n",
-        "data_path = '/drive/My Drive/Colab Notebooks/binarization/data/'"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -193,50 +195,200 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lzNrCfwPpYgb",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Define base directories"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "yNOfEpTq6ZW8",
+        "id": "hSs7vmbjQtcj",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "    train_data_dir = '../data/train_data/'\n",
-        "    file_path = '../data/train_data.lst'\n",
-        "    models_path = '../models/'\n",
-        "    images_names, images_gt_names = get_images_names(file_path)\n",
+        "data_path = '/content/drive/My Drive/Colab Notebooks/binarization/data/'\n",
+        "training_path = '/content/drive/My Drive/Colab Notebooks/binarization/data/training/'\n",
+        "models_path = '/content/drive/My Drive/Colab Notebooks/binarization/models'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cAhPYZBARGNq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "if os.path.exists(training_path):\n",
+        "  shutil.rmtree(training_path)\n",
+        "os.mkdir(training_path)\n",
         "\n",
-        "    train_images_names = images_names[0:100]\n",
-        "    train_images_gt_names = images_gt_names[0:100]\n",
-        "    validation_images_names = images_names[100:110]\n",
-        "    validation_images_gt_names = images_gt_names[100:110]\n",
+        "with zipfile.ZipFile(os.path.join(data_path, 'training.zip'), 'r') as zip_ref:\n",
+        "  zip_ref.extractall(training_path)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-eLwoyUUTTuC",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Get the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-lqRNlSVTZOL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Get train and validation images\n",
+        "train_images_names, train_images_gt_names = \\\n",
+        "  get_images_names(os.path.join(training_path, 'train.lst'))\n",
+        "validation_images_names, validation_images_gt_names = \\\n",
+        "  get_images_names(os.path.join(training_path, 'validation.lst'))\n",
         "\n",
-        "    train_generator = DataGenerator(train_images_names, train_images_gt_names, \n",
-        "                                    10, train_data_dir)\n",
-        "    validation_generator = DataGenerator(validation_images_names, \n",
-        "                                         validation_images_gt_names, 10, train_data_dir)\n",
-        "    \n",
-        "    if os.path.exists(os.path.join(models_path, 'UNet.h5')):\n",
-        "        UNet = load_model(os.path.join(models_path, 'UNet.h5'),\n",
-        "                          custom_objects={'jaccard_loss': jaccard_loss, \n",
-        "                                          'jaccard_accuracy': jaccard_accuracy,\n",
-        "                                          'dice_loss': dice_loss, \n",
-        "                                          'dice_accuracy': dice_accuracy})\n",
-        "    else:\n",
-        "        UNet = unet()\n",
-        "        UNet.compile(optimizer=Adam(), loss=jaccard_loss, metrics=['accuracy', jaccard_accuracy, dice_accuracy])\n",
+        "# Create the generators\n",
+        "train_generator = DataGenerator(train_images_names, \n",
+        "                                train_images_gt_names, \n",
+        "                                10,\n",
+        "                                os.path.join(data_path, 'training/train/'))\n",
         "\n",
-        "    \n",
-        "    UNet.fit_generator(\n",
-        "        generator=train_generator,\n",
-        "        steps_per_epoch=train_generator.__len__(),  # Compatibility with old Keras versions.\n",
-        "        validation_data=validation_generator,\n",
-        "        validation_steps=validation_generator.__len__(),  # Compatibility with old Keras versions.\n",
-        "        epochs=1,\n",
-        "        shuffle=True,\n",
-        "        use_multiprocessing=True,\n",
-        "        workers=4,\n",
-        "    )\n",
-        "    UNet.save(os.path.join(models_path, 'UNet.h5'))"
+        "validation_generator = DataGenerator(validation_images_names, \n",
+        "                                     validation_images_gt_names, \n",
+        "                                     10,\n",
+        "                                     os.path.join(data_path, 'training/validation'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sYeQGiznUTOz",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Load the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o_J3-eSfUXY5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "9db45ee8-8306-4c70-8d00-44aa746b5b58"
+      },
+      "source": [
+        "if os.path.exists(os.path.join(models_path, 'UNet.h5')):\n",
+        "    UNet = load_model(os.path.join(models_path, 'UNet.h5'),\n",
+        "                      custom_objects={'jaccard_loss': jaccard_loss, \n",
+        "                                      'jaccard_accuracy': jaccard_accuracy,\n",
+        "                                      'dice_loss': dice_loss, \n",
+        "                                      'dice_accuracy': dice_accuracy})\n",
+        "else:\n",
+        "    UNet = unet()\n",
+        "    UNet.compile(optimizer=Adam(), \n",
+        "                 loss=jaccard_loss, \n",
+        "                 metrics=['accuracy', \n",
+        "                 jaccard_accuracy, \n",
+        "                 dice_accuracy])"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0829 07:41:03.574532 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "W0829 07:41:03.618819 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "W0829 07:41:03.626587 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4185: The name tf.truncated_normal is deprecated. Please use tf.random.truncated_normal instead.\n",
+            "\n",
+            "W0829 07:41:03.669177 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+            "\n",
+            "W0829 07:41:03.670230 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+            "\n",
+            "W0829 07:41:07.104403 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1834: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+            "\n",
+            "W0829 07:41:07.282262 139871015307136 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+            "W0829 07:41:07.301376 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "\n",
+            "W0829 07:41:08.477729 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
+            "\n",
+            "W0829 07:41:09.688592 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yNOfEpTq6ZW8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "b75c2171-2b23-4bb4-f5de-7e1f68a58be0"
+      },
+      "source": [
+        "\n",
+        "UNet.fit_generator(\n",
+        "    generator=train_generator,\n",
+        "    steps_per_epoch=train_generator.__len__(),\n",
+        "    validation_steps=validation_generator.__len__(),\n",
+        "    epochs=1,\n",
+        "    shuffle=True,\n",
+        "    use_multiprocessing=True,\n",
+        "    workers=8,\n",
+        ")\n",
+        "UNet.save(os.path.join(models_path, 'UNet.h5'))"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/1\n",
+            "89/90 [============================>.] - ETA: 0s - loss: 0.0459 - acc: 0.9743 - jaccard_accuracy: 0.9541 - dice_accuracy: 0.9765\n",
+            "90/90 [==============================] - 27s 303ms/step - loss: 0.0457 - acc: 0.9745 - jaccard_accuracy: 0.9543 - dice_accuracy: 0.9766\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Vamhc3KU6DM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
