--- a/train_unet.ipynb
+++ b/train_unet.ipynb
@@ -350,31 +350,30 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 72
         },
-        "outputId": "b75c2171-2b23-4bb4-f5de-7e1f68a58be0"
+        "outputId": "e274c88b-671f-422a-cf6e-469d31d7b1f2"
       },
       "source": [
-        "\n",
         "UNet.fit_generator(\n",
         "    generator=train_generator,\n",
         "    steps_per_epoch=train_generator.__len__(),\n",
+        "    validation_data=validation_generator,\n",
         "    validation_steps=validation_generator.__len__(),\n",
         "    epochs=1,\n",
         "    shuffle=True,\n",
         "    use_multiprocessing=True,\n",
-        "    workers=8,\n",
+        "    workers=4,\n",
         ")\n",
         "UNet.save(os.path.join(models_path, 'UNet.h5'))"
       ],
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/1\n",
-            "89/90 [============================>.] - ETA: 0s - loss: 0.0459 - acc: 0.9743 - jaccard_accuracy: 0.9541 - dice_accuracy: 0.9765\n",
-            "90/90 [==============================] - 27s 303ms/step - loss: 0.0457 - acc: 0.9745 - jaccard_accuracy: 0.9543 - dice_accuracy: 0.9766\n"
+            "90/90 [==============================] - 29s 318ms/step - loss: 0.0255 - acc: 0.9805 - jaccard_accuracy: 0.9745 - dice_accuracy: 0.9870 - val_loss: 0.0189 - val_acc: 0.9855 - val_jaccard_accuracy: 0.9811 - val_dice_accuracy: 0.9904\n"
           ],
           "name": "stdout"
         }
