--- a/train_unet.ipynb
+++ b/train_unet.ipynb
@@ -41,25 +41,21 @@
       "metadata": {
         "id": "rOcA3O5HO-tT",
         "colab_type": "code",
-        "outputId": "c8434eb9-5f5d-49cb-8f26-49a74573bc49",
+        "outputId": "c2a7500c-d224-4aca-e578-2e4842bdf728",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 34
         }
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 1,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
             "Mounted at /content/drive\n"
           ],
           "name": "stdout"
@@ -69,32 +65,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "eNSiZinQG97q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import files"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "sedzQQyePmp4",
         "colab_type": "code",
-        "outputId": "394ee193-0129-4fe4-8fdf-81ad76213aa8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 121
-        }
+        "colab": {}
       },
       "source": [
         "!git clone https://stegmuel:JtBz06100307@github.com/stegmuel/binarization.git"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Cloning into 'binarization'...\n",
-            "remote: Enumerating objects: 30, done.\u001b[K\n",
-            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (25/25), done.\u001b[K\n",
-            "remote: Total 30 (delta 8), reused 18 (delta 3), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (30/30), done.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -124,11 +116,7 @@
       "metadata": {
         "id": "tSuV7aOJ4S3J",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "93051be3-4114-4517-b94b-954ef77aaea5"
+        "colab": {}
       },
       "source": [
         "import importlib.util\n",
@@ -141,16 +129,8 @@
         "from keras.models import load_model\n",
         "import zipfile"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -222,20 +202,93 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "g-ah29w2yPz7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!rm -r /content/drive/My\\ Drive/Colab\\ Notebooks/binarization/data/training\n",
+        "# !rm /content/drive/My\\ Drive/Colab\\ Notebooks/binarization/data/training.zip"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f41S_yLa0v65",
+        "colab_type": "code",
+        "outputId": "6a7998da-ed47-4b52-e956-1a7b844aa324",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "!ls /content/drive/My\\ Drive/Colab\\ Notebooks/binarization/data"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training  training.zip\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QtyrsyQ9spsu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mkdir /content/drive/My\\ Drive/Colab\\ Notebooks/binarization/data/training"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "cAhPYZBARGNq",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "if os.path.exists(training_path):\n",
-        "  shutil.rmtree(training_path)\n",
-        "os.mkdir(training_path)\n",
-        "\n",
         "with zipfile.ZipFile(os.path.join(data_path, 'training.zip'), 'r') as zip_ref:\n",
         "  zip_ref.extractall(training_path)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O7aeeT_ozn-I",
+        "colab_type": "code",
+        "outputId": "c3edda1c-ab25-40af-b9f1-7170727f7d41",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "!ls /content/drive/My\\ Drive/Colab\\ Notebooks/binarization/data/training"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "train  train.lst  validation  validation.lst\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -264,12 +317,12 @@
         "# Create the generators\n",
         "train_generator = DataGenerator(train_images_names, \n",
         "                                train_images_gt_names, \n",
-        "                                10,\n",
+        "                                32,\n",
         "                                os.path.join(data_path, 'training/train/'))\n",
         "\n",
         "validation_generator = DataGenerator(validation_images_names, \n",
         "                                     validation_images_gt_names, \n",
-        "                                     10,\n",
+        "                                     32,\n",
         "                                     os.path.join(data_path, 'training/validation'))"
       ],
       "execution_count": 0,
@@ -290,11 +343,7 @@
       "metadata": {
         "id": "o_J3-eSfUXY5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "9db45ee8-8306-4c70-8d00-44aa746b5b58"
+        "colab": {}
       },
       "source": [
         "if os.path.exists(os.path.join(models_path, 'UNet.h5')):\n",
@@ -311,48 +360,19 @@
         "                 jaccard_accuracy, \n",
         "                 dice_accuracy])"
       ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0829 07:41:03.574532 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-            "\n",
-            "W0829 07:41:03.618819 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "W0829 07:41:03.626587 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4185: The name tf.truncated_normal is deprecated. Please use tf.random.truncated_normal instead.\n",
-            "\n",
-            "W0829 07:41:03.669177 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
-            "\n",
-            "W0829 07:41:03.670230 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
-            "\n",
-            "W0829 07:41:07.104403 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1834: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
-            "\n",
-            "W0829 07:41:07.282262 139871015307136 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
-            "W0829 07:41:07.301376 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-            "\n",
-            "W0829 07:41:08.477729 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
-            "\n",
-            "W0829 07:41:09.688592 139871015307136 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yNOfEpTq6ZW8",
         "colab_type": "code",
+        "outputId": "9d33ef3e-7d1c-4b0b-dc16-b1d246da34c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "e274c88b-671f-422a-cf6e-469d31d7b1f2"
+        }
       },
       "source": [
         "UNet.fit_generator(\n",
@@ -367,13 +387,13 @@
         ")\n",
         "UNet.save(os.path.join(models_path, 'UNet.h5'))"
       ],
-      "execution_count": 29,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/1\n",
-            "90/90 [==============================] - 29s 318ms/step - loss: 0.0255 - acc: 0.9805 - jaccard_accuracy: 0.9745 - dice_accuracy: 0.9870 - val_loss: 0.0189 - val_acc: 0.9855 - val_jaccard_accuracy: 0.9811 - val_dice_accuracy: 0.9904\n"
+            "1407/1407 [==============================] - 1402s 997ms/step - loss: 0.0298 - acc: 0.9834 - jaccard_accuracy: 0.9702 - dice_accuracy: 0.9845 - val_loss: 0.0154 - val_acc: 0.9861 - val_jaccard_accuracy: 0.9846 - val_dice_accuracy: 0.9922\n"
           ],
           "name": "stdout"
         }
@@ -382,7 +402,84 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Vamhc3KU6DM",
+        "id": "7iN90oCVHWD9",
+        "colab_type": "code",
+        "outputId": "7534b5e1-4d75-4b61-9764-0fc59867d966",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "!ls /content/drive/My\\ Drive/Colab\\ Notebooks/binarization/models/"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "UNet.h5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FNTaGg1xNaKM",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Check behaviour of model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L98SJlP4HkRV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VSU8dt8wN5Af",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "index = 0\n",
+        "image_path = os.path.join(training_path, validation_images_names[index])\n",
+        "image_gt_path = os.path.join(training_path, validation_images_names[index])\n",
+        "image = np.load(image_path)\n",
+        "image_gt = np.load(image_gt_path)\n",
+        "input_image = np.expand_dims(np.expand_dims(image, axis=2), axis=0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0rbSkOY3RDwe",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Get a prediction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gv_jaRiIRC7z",
         "colab_type": "code",
         "colab": {}
       },
